Bug 1694898 - Override AsyncPanZoomEnabled in nsCocoaWindow to delegate it to nsChildView in the case of popups. r=mstange,botond

The widget for popup window on Mac is nsCocoaWindow which doesn't have
any APZC instances so that nsIWidget::AsyncPanZoomEnabled() always returned
false, we need to delegate the call to the nsChildView.

To be honest, I am quite unsure whether other functions using APZC also need
to be delegated or not, but I haven't noticed any issues now, so we will
fix one by one if there are any other issues.

Unfortunately the mochitest for this issue doesn't work both on Linux and
Windows, but it's presumably an issue in our testing machinery relevant with
nsIDOMWindowUtils.sendNativeMouseScrollEvent, it will not be a problem in the
wild because scrolling by real mouse wheel works fine there.

Differential Revision: https://phabricator.services.mozilla.com/D109572